  * Special:Translation now displays the original English message string as a
    label.

Bugfixes:

  * Fix DB2 installation by trimming all SQL constraint names to less than 18
    characters.
  * If two entries in the TOC have the same text make sure that the links do
    not always go to the first entry.
  * Better handle cases of mis-indented TOC (for example, h2 followed by h4).

Translation Updates:


0.6.0
=====

New Features:

  * New infrastructure for assigning fine-grained user permissions, including
    a new Special:Roles administrative interface.
  * User pages now offer a "User Contributions" tab that displays all
    contributions made by the user (RegisDecamps).
  * Project converted to use Maven (RegisDecamps & mikegr).
  * New Special:ImportTiddly page for importing from TiddlyWiki (mikegr).
  * Update the UI used in the wiki admin pages.
  * Remove ability to automatically upgrade from versions prior to 0.4.0.
  * Remove the unused & deprecated Special:Convert admin page.
  * Updated spam filter patterns.
  * Apostrophes are no longer automatically converted to &#39;. (RegisDecamps).
  * Image resizing uses a smaller resize increment, improving image quality.
  * Upgrade to Spring Framework 2.0.6.
  * Upgrade to Acegi Security 1.0.4.
  * Upgrade to ehcache 1.3.0.
  * Upgrade to Lucene Search 2.2.

Bugfixes:

  * Fix issue on Tomcat 5 & some other application servers that could cause
    corrupted topic names when editing non-ASCII topics.
  * Fix web.xml issue when using Glassfish application server (amerigo5).
  * Resolve a JNDI database connectivity issue (mnencia).
  * Fix an issue related to the SHA-512 algorithm that broke installations
    on JDK versions prior to 1.4.2.
  * UNIX systems without X could crash on image resizing.  Modify error
    handling to catch Throwable rather than Exception and log a message
    explaining how to work around this particular issue.  Reported and